# ds_scratch

./: README.md  main.py  pixi.toml  pyproject.toml  traffic_analysis_hw1.ipynb
.ipynb_checkpoints/: traffic_analysis_hw1-checkpoint.ipynb
pavement_proj/: Analysis.ipynb  CAPRI Data.xlsx  analyze_sample.ipynb
pavement_proj/.ipynb_checkpoints/: Analysis-checkpoint.ipynb  analyze_sample2-checkpoint.ipynb
traffic_analysis/: hw4_dq.ipynb  station_metadata.ipynb  traffic_analysis-hw1.ipynb  traffic_analysis__hw1.ipynb  traffic_analysis_hw1.ipynb  traffic_analysis_hw3.ipynb  traffic_analysis_hw4.ipynb
traffic_analysis/.ipynb_checkpoints/: traffic_analysis_hw1-checkpoint.ipynb  traffic_analysis_hw3-checkpoint.ipynb
