[project]
name = "ds-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "nbconvert>=7.17.0",
    "numpy==2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pandera>=0.30.1",
    "pip>=26.0.1",
    "plotly>=6.5.2",
    "pymupdf>=1.27.1",
    "scikit-posthocs>=0.12.0",
    "setuptools==80.8.0",
    "statsmodels>=0.14.6",
]
